#region Using ...
using Framework.Common.Enums;
using Framework.Common.Interfaces;
using EGService.Common.Enums;
using System;
using System.Collections.Generic;
using System.Diagnostics;
using System.Linq;
using System.Text;
#endregion

/*


*/
namespace EGService.Entity.Entities
{
    /// <summary>
    /// 
    /// </summary>

    public class User : IEntityIdentity<long>, IDateTimeSignature/*, IEntityUserSignature*/, IDeletionSignature
    {
        #region Constructors
        /// <summary>
        /// Initializes a new instance from type
        /// User
        /// </summary>
        public User()
        {
           
        }
        #endregion

        #region Properties

        #region IEntityIdentity<long>
        public long Id { get; set; }
        #endregion

        #region IDateTimeSignature
        public DateTime CreationDate { get; set; }
        public DateTime? FirstModificationDate { get; set; }
        public DateTime? LastModificationDate { get; set; }
        #endregion

        #region IEntityUserSignature
        public long? CreatedByUserId { get; set; }
        public long? FirstModifiedByUserId { get; set; }
        public long? LastModifiedByUserId { get; set; }
        #endregion

        #region IDeletionSignature
        public bool IsDeleted { get; set; }
        public DateTime? DeletionDate { get; set; }
        public long? DeletedByUserId { get; set; }
        public bool? MustDeletedPhysical { get; set; }
        #endregion

        public System.String FirstName { get; set; }
        public System.String LastName { get; set; }
        public System.String Username { get; set; }
        public System.String Password { get; set; }
        public string Email { get; set; }
        
        public Nullable<System.Boolean> IsActive { get; set; }
        
        #endregion
    }
}
