@startuml
class User {
    + User()
    + Id : long <<get>> <<set>>
    + FirstModificationDate : DateTime? <<get>> <<set>>
    + LastModificationDate : DateTime? <<get>> <<set>>
    + CreatedByUserId : long? <<get>> <<set>>
    + FirstModifiedByUserId : long? <<get>> <<set>>
    + LastModifiedByUserId : long? <<get>> <<set>>
    + IsDeleted : bool <<get>> <<set>>
    + DeletionDate : DateTime? <<get>> <<set>>
    + DeletedByUserId : long? <<get>> <<set>>
    + MustDeletedPhysical : bool? <<get>> <<set>>
    + Email : string <<get>> <<set>>
}
class "IEntityIdentity`1"<T> {
}
class "Nullable`1"<T> {
}
"IEntityIdentity`1" "<long>" <|-- User
IDateTimeSignature <|-- User
IDeletionSignature <|-- User
User --> "CreationDate" DateTime
User --> "IsActive<System.Boolean>" "Nullable`1"
@enduml
